--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,45 +1,60 @@
 body {
-  background: #fff;
-  padding: 0px;
-  margin: 0px;
-  font-family: 'Nunito', sans-serif;
-  font-size: 16px;
+	background: #fff;
+	padding: 0px;
+	margin: 0px;
+	font-family: 'Nunito', sans-serif;
+	font-size: 16px;
 }
 
-input, button {
-  font-family: 'Nunito', sans-serif;
-  font-weight: 700;
+input,
+button {
+	font-family: 'Nunito', sans-serif;
+	font-weight: 700;
 }
 
 .flex-list {
-    position: relative;
-    margin: 1em;
-    overflow: hidden;
+	position: relative;
+	margin: 1em;
+	overflow: hidden;
 }
 .flex-list ul {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    background-color:gold;
-    height:40px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	background-color: #8ee6fa;
+	height: 10%;
 }
 .flex-list li {
-   border-radius: 5px;
-    flex-grow: 0;
-    padding: 10px;
-    display:block;
-    display:inline-block;
-    margin-top: -10px;
-    text-align: center;
-    height:60px;
-    width:15%;
-    border: 3px solid #ccc;
-    background-color:PaleGoldenRod;
+	box-sizing: border-box;
+	appearance: none;
+	background-color: transparent;
+	border: 2px solid red;
+	border-radius: 0.6em;
+	color: red;
+	cursor: pointer;
+	display: flex;
+	align-self: center;
+	font-size: 1rem;
+	font-weight: 400;
+	line-height: 1;
+	margin: 5px;
+	padding: 1.2em 2.8em;
+	text-decoration: none;
+	text-align: center;
+	text-transform: uppercase;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700;
+}
+div.flex-list li:hover,
+div.flex-list li:focus {
+	color: #fff;
+	background-color: lightcoral;
+	outline: 0;
 }
 
-.navbarfont{
-    font-size: 150% ;
+.navbarfont {
+	font-size: 150%;
 }
 /* .dpmenu{
   border-radius: 5px;
@@ -52,47 +67,46 @@ input, button {
    border: 3px solid #ccc;
    background-color:PaleGoldenRod;
 } */
-.dplogout{
-  border-radius: 5px;
-   padding: 10px;
-   display:block;
-   margin-top: -10px;
-   text-align: center;
-   height:60px;
-   width:220px;
-   border: 3px solid #ccc;
-   background-color:PaleGoldenRod;
+.dplogout {
+	border-radius: 5px;
+	padding: 10px;
+	display: block;
+	margin-top: -10px;
+	text-align: center;
+	height: 60px;
+	width: 220px;
+	border: 3px solid #ccc;
+	background-color: PaleGoldenRod;
 }
-.weeb{
-  margin: 0.35em;
-    font-size: 30 ;
-    color:red;
-    background-color: gold;
+.weeb {
+	margin: 0.35em;
+	font-size: 30;
+	color: red;
+	background-color: lightblue;
 }
 
-.mangalist{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-left: 0px;
+.mangalist {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	margin-left: 0px;
 }
 .mangaimg {
-    flex-grow: 0;
-    padding: 0 0em;
-    display:block;
-    float:left;
-    border-left: 0px solid #ccc;
-    background-color: green;
+	flex-grow: 0;
+	padding: 0 0em;
+	display: block;
+	float: left;
+	border-left: 0px solid #ccc;
+	background-color: darkgray;
 }
 body {
-  background-color: PaleGreen;
-
+	background-color: #484a4a;
 }
 header {
-  background-color: gold;
-  border: 3px solid #ff9900;
-  height:80px;
+	background-color: #8ee6fa;
+	border: 1px solid blueviolet;
+	height: 80px;
 }
 /* .img-responsive {
     left:50%;
