--- a/src/css/style.css
+++ b/src/css/style.css
@@ -38,7 +38,7 @@ button {
 	font-size: 1rem;
 	font-weight: 400;
 	line-height: 1;
-	margin: 5px;
+	margin: 0.1%;
 	padding: 1.2em 2.8em;
 	text-decoration: none;
 	text-align: center;
